new test results - remove 10x execution from Teste-fora

--- a/data/results.ipynb
+++ b/data/results.ipynb
@@ -357,6 +357,23 @@
     "print(np.mean(rates))\n",
     "print(np.median(rates))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# by alfabetical order of directory:\n",
+    "# zfwi, zMeikonal, zMhelicon, zMkirmod, zMlinear(not included), zMmf, zMmig2, zMpwd, zMricker1, zMsigmoid, zMslice, zMsnr2, zMunif2\n",
+    "# o tamanho dos binários do Teste-fora\n",
+    "normal_sizes = [150280, 72048, 72248, 94872, 79664, 105832 80200, 94904, 66680, 74456, 80200, 81032]\n",
+    "host_sizes = [953.568, 953.568, 953.568, 953.568, 79664, 105832 80200, 94904, 66680, 74456, 80200, 81032]\n",
+    "enc_sizes = [8.388.728, 8.376.384, 8.384.048, 8.475.728, 8.379.072, 105832 80200, 94904, 66680, 74456, 80200, 81032]\n",
+    "enc_mem = [10240, 81920, 1024, 2048, 1024, 4096, 2048, 128, 512, 1024, 512, 32]\n",
+    "\n",
+    "# o tamanho dos binários do Teste-dentro-enclave\n"
+   ]
   }
  ]
 }
